# large_model_demo

./: .env-template  .gitignore  README.md  note.md  pyproject.toml.template
Agent/2025-11-17-customer_service_system/: README.md  customer_service.py  emotion_customer_service.py  knowledge_base_customer_service.py  pyproject.toml  utils.py
Agent/2025-11-18-LLM-based-Multi-Agent/: README.md  pyproject.toml  test_openai_nonchat qwen.py  test_openai_nonchat_kimi.py
Agent/2025-11-18-LLM-based-Multi-Agent/agent_tree_visualize/: agent_tree_visualize.py
Agent/2025-11-18-LLM-based-Multi-Agent/creative_writing/: creative_agent.py  style_consistency.py  version_control.py
Agent/2025-11-18-LLM-based-Multi-Agent/learning_assistant/: learning_assistant.py  realtime_feedback.py  teaching_agent.py
Agent/2025-11-18-LLM-based-Multi-Agent/problem_decomposer/: multi_level_reasoner.py  problem_decomposer.py  result_integrator.py
Agent/2025-11-18-LLM-based-Multi-Agent/smart_city/: collaborative_dms.py  resource_manager.py  smart_city_dms.py
Agent/2025-11-29-agno-demo/: README.md  main.py  pyproject.toml
Agent/2025-11-29-agno-demo/src/: agno_agentos.py  agno_hello_world.py  agno_hello_world2.py  agno_teams_demo.py  agno_workflow.py  llm_config.py
RAG/: P12 sync_2_GPU.ipynb  help.ipynb  pyproject.toml  template.env
RAG/P03 RAG pipeline/: speech.txt
RAG/P06 Groq inference/: proxy_wrapper.py
RAG/P07 Gen AI/: 1huggingface.ipynb
RAG/P10 On-Device AI/: app.py
RAG/P12 RAG-Optimization-Practices/: README.md  main.py  model_and_data.ipynb
RAG/P12 RAG-Optimization-Practices/Embedding-Distillation/: generate_distillation_data.py  generate_distillation_data.sh  prepare.ipynb
RAG/P12 RAG-Optimization-Practices/Reranker-Distillation/: create_triplets.sh  evaluate.sh  generate_logits.sh  train.sh
RAG/P14 rag-best-practices/: main.py  template.env
RAG/RAG-Level-01/P01-RAG-Projects/: README.md  pyproject.toml
RAG/RAG-Level-01/P01-RAG-Projects/P01 chatbot/: local_llama.py
RAG/RAG-Level-01/P01-RAG-Projects/P06 Groq inference/: test.py
RAG/RAG-Level-01/P01-RAG-Projects/P07 Gen AI/: 1huggingface.ipynb  test.py
RAG/RAG-Level-01/P01-RAG-Projects/P11 ImageEnhancer/: app.py
RAG/RAG-Level-01/P01-RAG-Projects/Project 01 chatbot/: app.py  local_llama.py
RAG/RAG-Level-01/P01-RAG-Projects/Project 02 APIs/: client.py
RAG/RAG-Level-01/P01-RAG-Projects/Project 03 RAG pipeline/: rag.ipynb
RAG/RAG-Level-01/P01-RAG-Projects/Project 05 Advanced RAG Q&A Project/: agents.ipynb
RAG/RAG-Level-01/P01-RAG-Projects/Project 06 Groq inference/: app.py
RAG/RAG-Level-01/P01-RAG-Projects/Project 07 Gen AI/: 1huggingface.ipynb  huggingface.ipynb
RAG/RAG-Level-01/P01-RAG-Projects/Project 08 Powerful Doc Q&A Chatbot/: app.py
RAG/RAG-Level-01/P02-demo_simple_rag_py/: README.md  demo.py  pyproject.toml
RAG/RAG-Level-01/RAG-Projects-01/: pyproject.toml
RAG/RAG-Level-01/RAG-Projects-01/P01 chatbot/: app.py
RAG/RAG-Level-01/RAG-Projects-01/P02 APIs/: app.py  client.py
RAG/RAG-Level-01/RAG-Projects-01/P05 Advanced RAG Q&A Project/: agents.ipynb
RAG/RAG-Level-01/RAG-Projects-01/P06 Groq inference/: app.py
RAG/RAG-Level-01/RAG-Projects-01/P10 On-Device AI/: app.py
RAG/RAG-Level-01/RAG-Projects-02/P13 demo_simple_rag_py/: README.md  demo.py
RAG/RAG-Level-02/P03-RAG-Optimization-Practices/: README.md  pyproject.toml
RAG/RAG-Level-02/P03-RAG-Optimization-Practices/Reranker-Distillation/: create_triplets.sh  evaluate.sh  train.py
RAG/RAG-Level-02/P04-rag-best-practices/: FTEmbed.py  README.md  main.py  prepare.ipynb  pyproject.toml
RAG/RAG-Level-02/P04-rag-best-practices/custom/: query.py
RAG/RAG-Level-02/RAG-Optimization-Practices/: pyproject.toml
RAG/RAG-Level-02/RAG-Optimization-Practices/Embedding-Distillation/: evaluation.sh  train.sh
RAG/RAG-Level-02/RAG-Optimization-Practices/Reranker-Distillation/: evaluate.sh  generate_logits.sh  prepare.ipynb  train.sh
RAG/RAG-Level-02/rag-best-practices/: prepare.ipynb
function_calling/2025-11-14-Agents-course/: bonus-unit1-gemma3模型的function-calling微调.md  bonus-unit1.ipynb  main.py  pyproject.toml  test.json
pretrain/2025-12-06-bailian-CFT-pdf-book/: README.md  prepare_data.py  pyproject.toml
