[project]
name = "2025-11-14-agents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.48.2",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "peft>=0.18.0",
    "tensorboardx>=2.6.4",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "trl>=0.25.1",
    "wandb>=0.23.0",
]
