[project]
name = "rag-optimization-practices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modelscope>=1.31.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.8.0",
    "vllm>=0.11.0",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
