[project]
name = "rag-best-practices"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.7.3",
    "flagembedding>=1.3.5",
    "jupyter>=1.1.1",
    "llama-index>=0.14.7",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-finetuning>=0.4.1",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-postprocessor-flag-embedding-reranker>=0.4.1",
    "llama-index-retrievers-bm25>=0.6.5",
    "llama-index-vector-stores-qdrant>=0.8.6",
    "notebook>=7.4.7",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
    "zhipuai>=2.1.5.20250825",
]
[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
